// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocaleLink /> should accept locale object 1`] = `
<Link
  as="/en-sg/about"
  href="/about?locale=en-sg"
>
  <a>
    About
  </a>
</Link>
`;

exports[`<LocaleLink /> should accept locale string 1`] = `
<Link
  as="/th-th/about"
  href="/about?locale=th-th"
>
  <a>
    เกี่ยวกับ
  </a>
</Link>
`;

exports[`<LocaleLink /> should render <Link /> to navigate from default locale 1`] = `
<Link
  as="/about"
  href="/about?locale=id-id"
>
  <a>
    Tentang
  </a>
</Link>
`;

exports[`<LocaleLink /> should render <Link /> to navigate from non-default locale 1`] = `
<Link
  as="/en/about"
  href="/about?locale=en-id"
>
  <a>
    About
  </a>
</Link>
`;

exports[`<LocaleLink /> should render <Link /> to navigate to another locale 1`] = `
<Link
  as="/en/"
  href="/?locale=en-id"
>
  <a>
    English (Indonesia)
  </a>
</Link>
`;

exports[`<LocaleLink /> should render <Link /> to navigate to custom route 1`] = `
<Link
  as="/p/hello-world"
  href="/post?title=Hello%20World&locale=id-id"
>
  <a>
    Hello World
  </a>
</Link>
`;
